--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "SIP gets images super easy :)",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index"
 	},
 	"repository": {
 		"type": "git",
